added i18n mixins & grid classes

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,1 +1,10 @@
 $default-font-size: 1.4rem; // to make it 14 px
+
+
+$grid-columns: 12;
+// $breakpoints
+// 'phone': 0 - 600px, //Phone
+// 'tab-port': 600 - 900px, // Tablet portrait
+// 'tab-land': 900 - 1200px, //Tablet landscape
+// // [1200 - 1800] is where our normal styles apply
+// 'big-desktop': 1800px,  // 1800px + Big desktop
