--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,8 @@
-@import 'base/base'
+// @import 'abstracts/variables';
+@import 'abstracts/mixins';
+// @import 'abstracts/i18n-mixins';
+// @import 'abstracts/functions';
+
+@import 'base/base';
+
+@import 'layout/grid';
