--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,10 +1,47 @@
-$default-font-size: 1.4rem; // to make it 14 px
+// Colors
+$white:    #fff !default;
+$gray-100: #f8f9fa !default;
+$gray-200: #e9ecef !default;
+$gray-300: #dee2e6 !default;
+$gray-400: #ced4da !default;
+$gray-500: #adb5bd !default;
+$gray-600: #6c757d !default;
+$gray-700: #495057 !default;
+$gray-800: #343a40 !default;
+$gray-900: #212529 !default;
+$black:    #000 !default;
 
+$teal:    #20c997 !default;
+$indigo:  #6610f2 !default;
+$purple:  #6f42c1 !default;
+$pink:    #d63384 !default;
+$orange:  #fd7e14 !default;
+$blue:    #0d6efd !default;
+$red:     #dc3545 !default;
+$yellow:  #ffc107 !default;
+$green:   #198754 !default;
+$cyan:    #0dcaf0 !default;
 
+$primary:       $blue !default;
+$secondary:     $gray-600 !default;
+$success:       $green !default;
+$info:          $cyan !default;
+$warning:       $yellow !default;
+$danger:        $red !default;
+
+// Breakpoints
+$phone: 600px;        // 0 - 600px, //Phone
+$tab-port: 900px;     // 600 - 900px, // Tablet portrait
+$tab-land: 1200px;    // 900 - 1200px, //Tablet landscape
+// [1200 - 1800] is where our normal styles apply
+$big-desktop: 1800px; // 1800px + Big desktop
+
+// Layout
 $grid-columns: 12;
-// $breakpoints
-// 'phone': 0 - 600px, //Phone
-// 'tab-port': 600 - 900px, // Tablet portrait
-// 'tab-land': 900 - 1200px, //Tablet landscape
-// // [1200 - 1800] is where our normal styles apply
-// 'big-desktop': 1800px,  // 1800px + Big desktop
+
+// Fonts
+$font-family-roboto: 'Roboto', sans-serif;
+$font-family-monospace: "monospace";
+
+// Font Size
+$default-font-size: 1.6rem; // to make it 14 px
