--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,9 @@
-// @import 'abstracts/variables';
+@import 'abstracts/variables';
 @import 'abstracts/mixins';
 // @import 'abstracts/i18n-mixins';
 // @import 'abstracts/functions';
 
 @import 'base/base';
+@import 'base/typography';
 
 @import 'layout/grid';
